Shared get functionality WIP

--- a/Ethereal Cloud/Pages/Shared.cshtml
+++ b/Ethereal Cloud/Pages/Shared.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using Ethereal_Cloud.Models
-@model Ethereal_Cloud.Pages.UploadModel
+@model Ethereal_Cloud.Pages.SharedModel
 @{
     ViewBag.Title = "Shared";
     Layout = "Shared/_Layout.cshtml";
