Share get handles response for only files

--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -242,6 +242,9 @@
 
 
         function shareFile(id) {
+
+            console.log("Share activated: " + id)
+
             document.getElementById('fileIdShareInput').value = id;
 
             // Submit the form
