--- a/Ethereal Cloud/wwwroot/css/Shared.css
+++ b/Ethereal Cloud/wwwroot/css/Shared.css
@@ -1,1 +1,20 @@
-﻿
+﻿#share-button-holder {
+    padding: 0px;
+    position: absolute;
+    right: 20px;
+    top: 10px;
+}
+
+#share-button {
+    height: 36px;
+    border-bottom: none;
+    background: #cbbbe2;
+}
+
+    #share-button.active {
+        background: #f2f2f2;
+    }
+
+    #share-button:hover {
+        background: #cbbb11;
+    }
