--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -4,8 +4,8 @@
 @{
     ViewBag.Title = "Upload";
     Layout = "Shared/_Layout.cshtml";
-                <link rel="stylesheet" href="/css/Upload.css" asp-append-version="true">
-
+    <link rel="stylesheet" href="/css/Upload.css" asp-append-version="true">
+    <script src="/js/scripts.js"></script>
 }
 
 <!-- File explorer -->
@@ -88,7 +88,7 @@
 
                                 @if (@display.Type == "Folder")
                                 {
-                                    // Folders
+                                // Folders
                                     <button id="fileSettingsButton" aria-expanded="false" aria-controls="file-info-@display.Id" onclick="toggleFileInfo('file-info-@display.Id-@display.Type')">
                                         <img id="fileSettingsImage" src="~/images/menu-icons/three-dots.svg" alt="path">
 
@@ -172,7 +172,7 @@
         }
 
         function hideButton(holderId, menuId) {
-            if (matchMedia('(hover: hover)').matches){
+            if (matchMedia('(hover: hover)').matches) {
                 var holder = document.getElementById(holderId);
                 var menu = document.getElementById(menuId);
                 if (menu.style.display !== "block") {
@@ -220,108 +220,12 @@
             }
         });
 
-
-
-        //Menu functions
-
-        function downloadFile(id) {
-
-            document.getElementById('fileIdDownloadInput').value = id;
-
-            // Submit the form
-            document.getElementById('downloadForm').submit();
-        }
-
-        function deleteFile(id, fileType) {
-            document.getElementById('fileIdInput').value = id;
-            document.getElementById('typeInput').value = fileType;
-
-            // Submit the form
-            document.getElementById('deleteForm').submit();
-        }
-
-
-        function shareFile(id) {
-
-            console.log("Share activated: " + id)
-
-            document.getElementById('fileIdShareInput').value = id;
-
-            // Submit the form
-            document.getElementById('shareForm').submit();
-        }
-
-        function renameFile(id) {
-            // Implement rename logic here
-            console.log("Renaming file: " + id);
-        }
-
-
-        function navIntoFolderOrDownload(id, fileType, name) {
-            if (fileType === "Folder") {
-
-                document.getElementById('idNavInput').value = id;
-                document.getElementById('nameNavInput').value = name;
-
-                // Submit the form
-                document.getElementById('navForm').submit();
-            } else {
-
-                downloadFile(id);
-            }
-        }
-
         // Console logger
         var logger = '@ViewData["logger"]';
         if (logger !== null) {
             console.log(decodeHtml(logger));
         }
-
-        //Decodes html text
-        function decodeHtml(html) {
-            var txt = document.createElement("textarea");
-            txt.innerHTML = html;
-            return txt.value;
-        }
-
-        //Changes the sort image when pressed
-        function toggleSort() {
-            // Submit the form
-            document.getElementById('sortForm').submit();
-        }
-
-        //Loads naming folder popup
-        function showInputBox() {
-            document.getElementById('input-box').style.display = 'block';
-            document.querySelector('#input-box input[name="foldername"]').focus();
-        }
-
-        //Cancels the folder creation
-        function cancelFolderCreation() {
-            document.getElementById('input-box').style.display = 'none';
-        }
-
-
-        // Mobile hold tap function
-        var holdtapTimer = null;
-
-        function tap(id, fileType, name) {
-            holdtapTimer = setTimeout(function () {
-                tapHoldTimer(id, fileType, name);
-            }, 500); //500ms time hold
-
-        }
-
-        function tapCancel() {
-            clearTimeout(holdtapTimer);
-        }
-
-        function tapHoldTimer(id, fileType, name) {
-            navIntoFolderOrDownload(id, fileType, name);
-        }
-
     </script>
-
 
     string SetSort()
     {
@@ -404,7 +308,6 @@
         }
     }
 
-
     <!-- Hidden form for delete action -->
     <form id="deleteForm" method="post" asp-page-handler="Delete">
         <input name="fileId" type="hidden" id="fileIdInput">
@@ -430,7 +333,4 @@
     <!-- Hidden form for sorting -->
     <form id="sortForm" method="post" asp-page-handler="Sort">
     </form>
-
-
-
 }
