--- a/Ethereal Cloud/Pages/Shared.cshtml
+++ b/Ethereal Cloud/Pages/Shared.cshtml
@@ -158,6 +158,12 @@
             }
         });
 
+        function decodeHtml(html) {
+            var txt = document.createElement("textarea");
+            txt.innerHTML = html;
+            return txt.value;
+        }
+
         // Console logger
         var logger = '@ViewData["logger"]';
         if (logger !== null) {
