Generalised all cookie management

--- a/Ethereal Cloud/Pages/Register.cshtml
+++ b/Ethereal Cloud/Pages/Register.cshtml
@@ -99,7 +99,7 @@
 
                     <!-- Submit button -->
                     <div class="mb-3">
-                        <button type="submit" id="login-btn" class="btn btn-primary" onclick="return validateForm();" disabled>Register</button>
+                        <button type="submit" id="login-btn" class="btn btn-primary" disabled>Register</button>
                     </div>
 
                     <div class="mb-3 links">
