--- a/Ethereal Cloud/Pages/SharedWithOthers.cshtml
+++ b/Ethereal Cloud/Pages/SharedWithOthers.cshtml
@@ -7,6 +7,7 @@
     Layout = "Shared/_Layout.cshtml";
     <link rel="stylesheet" href="/css/Upload.css" asp-append-version="true">
     <link rel="stylesheet" href="/css/Shared.css" asp-append-version="true">
+    <script src="/js/scripts.js"></script>
 }
 
 <!-- File explorer -->
