--- a/Ethereal Cloud/Pages/SharedWithOthers.cshtml
+++ b/Ethereal Cloud/Pages/SharedWithOthers.cshtml
@@ -42,7 +42,7 @@
                     {
                         <div id="uploaded-files" class="file-hover" ontouchstart="tap('@display.Id','@display.Type','@display.Name')" ontouchend="tapCancel()" ondblclick="navIntoFolderOrDownload('@display.Id','@display.Type','@display.Name')" onmouseover="showButton('fileButtonHolder-@display.Id-@display.Type')" onmouseout="hideButton('fileButtonHolder-@display.Id-@display.Type', 'file-info-@display.Id-@display.Type')">
                             <a id="fileLink">
-                                <img id="uploaded-files-img" src="~/images/file-icons/@GetImageForFileType(@display.Type)" alt="logo" class="logo">
+                                <img id="uploaded-files-img" src="~/images/file-icons/@FileFolderIcon.GetIcon(display.Type)" alt="logo" class="logo">
                             </a>
                             <p>@display.Name</p>
 
@@ -102,11 +102,6 @@
 </div>
 
 @{
-
-    string GetImageForFileType(string fileType)
-    {
-        return FileFolderIcon.GetIcon(fileType);
-    }
 
     <!-- Scripts -->
     <script>
