--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -79,7 +79,7 @@
                     {
                         <div id="uploaded-files" class="file-hover" ontouchstart="tap('@display.Id','@display.Type','@display.Name')" ontouchend="tapCancel()" ondblclick="navIntoFolderOrDownload('@display.Id','@display.Type','@display.Name')" onmouseover="showButton('fileButtonHolder-@display.Id-@display.Type')" onmouseout="hideButton('fileButtonHolder-@display.Id-@display.Type', 'file-info-@display.Id-@display.Type')">
                             <a id="fileLink">
-                                <img id="uploaded-files-img" src="~/images/file-icons/@GetImageForFileType(@display.Type)" alt="logo" class="logo">
+                                <img id="uploaded-files-img" src="~/images/file-icons/@FileFolderIcon.GetIcon(display.Type)" alt="logo" class="logo">
                             </a>
                             <p>@display.Name</p>
 
@@ -119,7 +119,7 @@
 
                                                 <div class="menu-item" onclick="shareFile('@display.Id')">Share</div>
 
-                                                <div class="menu-item" onclick="showSharePopup()">ShareToFix</div>
+                                                <div class="menu-item" onclick="showSharePopup('@display.Id')">ShareToFix</div>
 
                                                 <div class="menu-item" onclick="deleteFile('@display.Id', '@display.Type')">Delete</div>
                                             </div>
@@ -220,8 +220,10 @@
         }
 
         // Function to show the share popup
-        function showSharePopup() {
+        function showSharePopup(id) {
             document.getElementById("sharePopup").style.display = "block";
+
+
         }
 
         // Function to close the share popup
@@ -328,11 +330,6 @@
             // Backwards alphabetical
             return "images/tools/sort-alpha-down.svg";
         }
-    }
-
-    string GetImageForFileType(string fileType)
-    {
-        return FileFolderIcon.GetIcon(fileType);
     }
 
     <!-- Hidden form for delete action -->
